# coverage-tracker

./: .gitignore  package.json
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
mcp-server/src/tools/: mod.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: coverage.rs  eol.rs  export.rs  mod.rs  repos.rs  runner.rs
src-tauri/src/db/: coverage.rs  migrations.rs  mod.rs  repos.rs
src-tauri/src/eol/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/github/: client.rs  mod.rs
src-tauri/src/istanbul/: mod.rs
src-tauri/src/node/: mod.rs  runner.rs
src-tauri/src/ruby/: mod.rs  runner.rs
src-tauri/src/simplecov/: mod.rs
src-tauri/src/version_manager/: mod.rs
src/lib/: api.ts
src/lib/components/: CoverageBadge.svelte  RunLog.svelte  TrendSparkline.svelte
src/lib/stores/: coverage.ts  repos.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/repo/[id]/: +page.svelte
src/routes/settings/: +page.svelte
