[package]
name = "coverage-mcp"
version = "0.1.0"
edition = "2021"
description = "Read-only MCP server for Coverage Manager"

[[bin]]
name = "coverage-mcp"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
